--- a/capstone-1/index.css
+++ b/capstone-1/index.css
@@ -1,4 +1,5 @@
 index.css
+
 *{
 margin: 0;
 padding: 0;
@@ -6,13 +7,9 @@ box-sizing: border-box;
 }
 
 body{
-	font-family: Open Sans, sans-serif; 
-	text-align: center;
+	font-family: Open Sans, sans-serif;} 
+
+img {
+	width: cover;
 }
 
-.profpic {
-	border-radius: 50%;
-	align: left;
-	width:  20rem;
-	margin-bottom: 25 vh;
-}
