WDC028-13 Capstone 1 Development - Developer Portfolio

--- a/capstone-1/index.css
+++ b/capstone-1/index.css
@@ -9,7 +9,9 @@ box-sizing: border-box;
 body{
 	font-family: Open Sans, sans-serif;} 
 
-img {
-	width: cover;
-}
 
+img {
+	background-size: cover;
+}
+	
+}
